--- a/views/assets/css/main.css
+++ b/views/assets/css/main.css
@@ -280,32 +280,86 @@ input:invalid:focus {
 
 
 
-/* Flexbox testing */
+/* Flexbox Gallery */
 
 .flex-gallery{
-  padding: 10px;
   display: flex;
   background-color: pink;
-  justify-content: space-between;
   height: 200px;
-
-}
-.boxE{
- background-color: #7772E6;
- display:block;
-  width:33%;
-
+  gap: 10px;
+  
 }
 
-.one-pic2row{
-  width:33%;
+.two-col{
+  width: 70%;
   display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  height: 100%;
+  gap: 10px;
+  
 }
 
-.one-pic2row div{
-  background-color: brown;
-  height: 50%;
+.boxE{
+  width: 50%;
+  background-color: #7772E6;
+
 }
+
+.one-col-two-rows {
+  display: grid; 
+  color: white;
+  width: 30%;
+  gap: 10px;
+  
+}
+
+.one-col-two-rows div{
+  background-color: red;
+  border: solid 1px black;
+  
+}
+
+/*content card*/
+
+
+.content{
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+}
+
+.content-text{
+  width:75%;
+}
+
+.content-card{
+  display: flex;
+  width: 25%;
+  height: 200px;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.price-card{
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  width: 90%;
+  height: 90%;
+  border-radius: 20px;
+  border: solid 2px var(--primary);
+  box-shadow: 1px 1px 10px var(--primary);
+}
+
+.price-card p {
+  font-size: 30px;
+  color: var(--black);
+}
+.price-card button {
+  background-color: var(--primary);
+  color: var(--white);
+  border: none;
+  border-radius: 10px;
+  padding: 10px;
+  font-size: 20px;
+}
+
