v3 price card now responsive

--- a/views/modules/info-service.html
+++ b/views/modules/info-service.html
@@ -38,7 +38,8 @@
                     mi, urna iaculis dis eleifend fusce bibendum a felis magnis. Lorem ipsum dolor sit amet consectetur
                     adipisicing elit. In illo nam a iusto vel quam, repellat libero tenetur nemo ut placeat enim
                     laudantium eligendi, voluptas impedit et assumenda, delectus blanditiis. Lorem ipsum dolor sit amet
-                    consectetur adipisicing elit. Amet, soluta ipsam sed earum consequuntur quis, blanditiis quas nihil possimus nihil similique
+                    consectetur adipisicing elit. Amet, soluta ipsam sed earum consequuntur quis, blanditiis quas nihil
+                    possimus nihil similique
                     amet! A! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo vero, iure accusamus a
                     dolorem rem laborum numquam minus aliquam nobis voluptas reiciendis fugit. Placeat voluptatum sit
                     impedit id, nesciunt autem.</p>
@@ -47,7 +48,8 @@
 
             <div class="content-card">
                 <div class="price-card">
-                    <p>1000€ / 24h</p>                    <button>Reservar</button>
+                    <p>1000€ / 24h</p>
+                    <button>Reservar</button>
                 </div>
             </div>
 
@@ -59,13 +61,13 @@
         <div class="flex-gallery">
 
             <div class="two-col">
-                <div class="boxE"> 1box </div>
-                <div class="boxE"> 2box </div>
+                <div class="boxE"></div>
+                <div class="boxE"></div>
             </div>
 
             <div class="one-col-two-rows">
-                <div> 1 box </div>
-                <div> 2 box </div>
+                <div></div>
+                <div></div>
             </div>
 
         </div>
