--- a/views/modules/info-service.html
+++ b/views/modules/info-service.html
@@ -16,19 +16,7 @@
 
 
     <div class="B-main">
-        <div class="image-grid">
-            <img class="image-grid-col-2 image-grid-row-2"
-                src="https://images.pexels.com/photos/18925457/pexels-photo-18925457/free-photo-of-a-snowy-village-in-the-middle-of-the-ocean-with-mountains-in-the-background.jpeg?auto=compress&cs=tinysrgb&w=1600&lazy=load"
-                alt="architecture">
-            <img src="https://images.pexels.com/photos/18925457/pexels-photo-18925457/free-photo-of-a-snowy-village-in-the-middle-of-the-ocean-with-mountains-in-the-background.jpeg?auto=compress&cs=tinysrgb&w=1600&lazy=load"
-                alt="architecture">
-            <img src="https://images.pexels.com/photos/18925457/pexels-photo-18925457/free-photo-of-a-snowy-village-in-the-middle-of-the-ocean-with-mountains-in-the-background.jpeg?auto=compress&cs=tinysrgb&w=1600&lazy=load"
-                alt="architecture">
-            <img src="https://images.pexels.com/photos/18925457/pexels-photo-18925457/free-photo-of-a-snowy-village-in-the-middle-of-the-ocean-with-mountains-in-the-background.jpeg?auto=compress&cs=tinysrgb&w=1600&lazy=load"
-                alt="architecture">
-            <img src="https://images.pexels.com/photos/18925457/pexels-photo-18925457/free-photo-of-a-snowy-village-in-the-middle-of-the-ocean-with-mountains-in-the-background.jpeg?auto=compress&cs=tinysrgb&w=1600&lazy=load"
-                alt="architecture">
-        </div>
+
 
         <section class="content">
             <div class="content-text">
@@ -45,34 +33,35 @@
                     impedit id, nesciunt autem.</p>
 
             </div>
-
             <div class="content-card">
                 <div class="price-card">
                     <p>1000€ / 24h</p>
                     <button>Reservar</button>
                 </div>
             </div>
-
-
         </section>
 
 
-
-        <div class="flex-gallery">
-
-            <div class="two-col">
-                <div class="boxE"></div>
-                <div class="boxE"></div>
-            </div>
-
-            <div class="one-col-two-rows">
-                <div></div>
-                <div></div>
-            </div>
-
+        <div class="new-grid-Galley">
+            <img class="pic-1"
+                src="https://images.unsplash.com/photo-1696388790726-68161096266e?auto=format&fit=crop&q=80&w=2070&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                alt="" srcset="">
+            <img class="pic-2"
+                src="https://images.unsplash.com/photo-1696388790726-68161096266e?auto=format&fit=crop&q=80&w=2070&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                alt="" srcset="">
+            <img class="pic-3"
+                src="https://images.unsplash.com/photo-1696388790726-68161096266e?auto=format&fit=crop&q=80&w=2070&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                alt="" srcset="">
+            <img class="pic-4"
+                src="https://images.unsplash.com/photo-1696388790726-68161096266e?auto=format&fit=crop&q=80&w=2070&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                alt="" srcset="">
         </div>
 
-        <br><br>
+
+
+
+
+
 
 
 
