--- a/views/modules/new-event-form.html
+++ b/views/modules/new-event-form.html
@@ -11,69 +11,87 @@
 
 <body>
 
-  <section class="create__new__event">
+  <section class="form-section">
 
-    <div class="create-event__container">
-
+    <div class="form__container">
       <h2>Crear <span class="primary">Evento</span></h2>
 
-      <div class="square__event__form"></div>
+      <div class="square"></div>
 
-      <form class="event__form" id="new-event-form">
+      <form class="form" id="form">
 
-      <!-- name event  -->
-        <label for="event_name" class="create__event__form__input">
-          <input class="content__input" id="event_name" type="text" name="event_name" placeholder="Nombre del evento"
-            onkeyup="validateInputData('event_name')">
+        <!-- name event  -->
+        <label for="event-name" class="form__input">
+          Nombre del evento:
+          <input id="event-name" type="text" name="event-name" placeholder="Nombre del evento"
+            onkeyup="validateInputData('event-name')">
+
           <span class="inactive">Ingrese un valor valido.</span>
         </label>
-         
+
         <!-- date event  -->
-        <label for="event_date" class="create__event__form__input">
-            Fecha:
-          <input class="content__input"  id="event_date" type="date" name="event_date" placeholder="Fecha"
-            onkeyup="validateInputData('event_date')">
+        <label for="event-date" class="form__input">
+          Fecha:
+          <input id="event-date" type="date" name="event-date" placeholder="Fecha"
+            onchange="validateInputData('event-date')">
+
           <span class="inactive">Ingrese un valor valido.</span>
         </label>
 
         <!-- time event -->
-        <label for="event_time" class="create__event__form__input">
-            Hora:
-          <input class="content__input"  id="event_time" type="time" name="event_time" placeholder="Hora"
-            onkeyup="validateInputData('event_time')">
+        <label for="event-time" class="form__input">
+          Hora:
+          <input id="event-time" type="time" name="event-time" placeholder="Hora"
+            onchange="validateInputData('event-time')">
+
           <span class="inactive">Ingrese un valor valido.</span>
         </label>
 
         <!-- type event -->
-        <label for="event_type" class="create__event__form__input">
-             Tipo de evento:
-        </label>
-        
-        <select name="event_type" id="event_type" class="create__event__form__select content__input">
+        <label for="event-type" class="form__input">
+          Tipo de evento:
+
+          <select name="event-type" id="event-type" onchange="validateInputData('event-type')">
+            <option value="" hidden>Seleccione un tipo de evento</option>
+
             <option value="1">Boda</option>
+
             <option value="2">Fiesta de cumpleaños</option>
+
             <option value="3">Baby showers</option>
+
             <option value="4">Conferencia/Seminario</option>
+
             <option value="5">Quince años</option>
+
             <option value="6">Reunión corporativa</option>
+
             <option value="7">Feria/Exposición</option>
+
             <option value="8">Celebración familiar</option>
+
             <option value="9">Bautizo</option>
+
             <option value="10">Comunión</option>
+
             <option value="11">Confirmación</option>
+
             <option value="12">Graduación</option>
-        </select>
+          </select>
 
-    <button type="button" id="create-event-form-button">Crear</button>
+          <span class="inactive">Ingrese un valor valido.</span>
+        </label>
 
+        <button type="button" id="form-button">Crear</button>
       </form>
-
     </div>
-
   </section>
 
-
   <script src="../assets/js/main.js"></script>
+  <script>
+    const newEventFormButton = document.getElementById('form-button');
+    newEventFormButton.addEventListener('click', () => createUser('event'));
+  </script>
 
 </body>
 
