refactor(app): Refactor service gallery structure and styles

--- a/views/modules/info-service.html
+++ b/views/modules/info-service.html
@@ -2,80 +2,54 @@
 <html>
 
 <head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Page Title</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='../assets/css/main.css'>
-    <script src='main.js'></script>
+  <meta charset='utf-8'>
+  <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+  <title>Page Title</title>
+  <meta name='viewport' content='width=device-width, initial-scale=1'>
+  <link rel='stylesheet' type='text/css' media='screen' href='../assets/css/main.css'>
+  <script src='main.js'></script>
 </head>
 
 <body>
+  <section class="info-service">
+    <div class="info-service__gallery">
+      <img
+        src="https://images.unsplash.com/photo-1696388790726-68161096266e?auto=format&fit=crop&q=80&w=2070&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+        alt="">
+      <img
+        src="https://images.unsplash.com/photo-1696388790726-68161096266e?auto=format&fit=crop&q=80&w=2070&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+        alt="">
+      <img
+        src="https://images.unsplash.com/photo-1696388790726-68161096266e?auto=format&fit=crop&q=80&w=2070&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+        alt="">
+      <img
+        src="https://images.unsplash.com/photo-1696388790726-68161096266e?auto=format&fit=crop&q=80&w=2070&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+        alt="">
+    </div>
+  </section>
 
-
-
-
-    <div class="B-main">
-
-
-        <section class="content">
-            <div class="content-text">
-                <h3>NOMBRE DEL SERVICIO</h3>
-                <h4>Noruega</h4>
-                <p>Descripcion del servicio. Lorem ipsum dolor sit amet consectetur adipiscing elit gravida phasellus ad
-                    mi, urna iaculis dis eleifend fusce bibendum a felis magnis. Lorem ipsum dolor sit amet consectetur
-                    adipisicing elit. In illo nam a iusto vel quam, repellat libero tenetur nemo ut placeat enim
-                    laudantium eligendi, voluptas impedit et assumenda, delectus blanditiis. Lorem ipsum dolor sit amet
-                    consectetur adipisicing elit. Amet, soluta ipsam sed earum consequuntur quis, blanditiis quas nihil
-                    possimus nihil similique
-                    amet! A! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo vero, iure accusamus a
-                    dolorem rem laborum numquam minus aliquam nobis voluptas reiciendis fugit. Placeat voluptatum sit
-                    impedit id, nesciunt autem.</p>
-
-            </div>
-            <div class="content-card">
-                <div class="price-card">
-                    <p>1000€ / 24h</p>
-                    <button>Reservar</button>
-                </div>
-            </div>
-        </section>
-
-
-        <div class="new-grid-Galley">
-            <img class="pic-1"
-                src="https://images.unsplash.com/photo-1696388790726-68161096266e?auto=format&fit=crop&q=80&w=2070&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-                alt="" srcset="">
-            <img class="pic-2"
-                src="https://images.unsplash.com/photo-1696388790726-68161096266e?auto=format&fit=crop&q=80&w=2070&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-                alt="" srcset="">
-            <img class="pic-3"
-                src="https://images.unsplash.com/photo-1696388790726-68161096266e?auto=format&fit=crop&q=80&w=2070&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-                alt="" srcset="">
-            <img class="pic-4"
-                src="https://images.unsplash.com/photo-1696388790726-68161096266e?auto=format&fit=crop&q=80&w=2070&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-                alt="" srcset="">
-        </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+  <section class="content">
+    <div class="content-text">
+      <h3>NOMBRE DEL SERVICIO</h3>
+      <h4>Noruega</h4>
+      <p>Descripcion del servicio. Lorem ipsum dolor sit amet consectetur adipiscing elit gravida phasellus ad
+        mi, urna iaculis dis eleifend fusce bibendum a felis magnis. Lorem ipsum dolor sit amet consectetur
+        adipisicing elit. In illo nam a iusto vel quam, repellat libero tenetur nemo ut placeat enim
+        laudantium eligendi, voluptas impedit et assumenda, delectus blanditiis. Lorem ipsum dolor sit amet
+        consectetur adipisicing elit. Amet, soluta ipsam sed earum consequuntur quis, blanditiis quas nihil
+        possimus nihil similique
+        amet! A! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo vero, iure accusamus a
+        dolorem rem laborum numquam minus aliquam nobis voluptas reiciendis fugit. Placeat voluptatum sit
+        impedit id, nesciunt autem.</p>
 
     </div>
-
-
-
+    <div class="content-card">
+      <div class="price-card">
+        <p>1000€ / 24h</p>
+        <button>Reservar</button>
+      </div>
+    </div>
+  </section>
 </body>
 
 </html>
