--- a/views/assets/css/main.css
+++ b/views/assets/css/main.css
@@ -216,31 +216,42 @@ input:invalid:focus {
   display: none;
 }
 
-
-
-
-
-
-
-
-
-
-/* info Service */
-/* info Service */
-/* info Service */
-/* info Service */
 /* info Service */
 
-
-
-
-
-
-.B-main {
-  padding-left: 15rem;
-  padding-right: 15rem;
+.info-service {
+  padding: 2rem;
 }
 
+.info-service__gallery {
+  display: grid;
+  grid-template-columns: 3fr 1fr 1fr;
+  grid-template-rows: repeat(2, minmax(130px, 2fr));
+  width: 100%;
+  gap: 1rem;
+}
+
+.info-service__gallery img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 15px;
+}
+
+.info-service__gallery img:nth-child(1) {
+  grid-area: 1 / 1 / 3 / 2;
+}
+
+.info-service__gallery img:nth-child(2) {
+  grid-area: 1 / 2 / 3 / 3;
+}
+
+.info-service__gallery img:nth-child(3) {
+  grid-area: 1 / 3 / 2 / 4;
+}
+
+.info-service__gallery img:nth-child(4) {
+  grid-area: 2 / 3 / 3 / 4;
+}
 
 
 .content {
@@ -307,79 +318,4 @@ input:invalid:focus {
   border-radius: 10px;
   padding: 10px;
   font-size: 20px;
-}
-
-
-
-/* R e s p o n s i v e  */
-@media (max-width: 1300px) {
-
-  h3 {
-    color: red;
-  }
-
-  .content {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-  }
-
-  .content-card {
-    width: 100%;
-  }
-
-  .content-text {
-    width: 100%;
-  }
-
-  .B-main {
-    padding-left: 1rem;
-    padding-right: 1rem;
-  }
-
-
-
-
-
-
-
-}
-
-
-
-
-/* new Grid Gallery */
-.new-grid-Galley {
-  display: grid;
-  grid-template-columns: 60% 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
-  width: 100%;
-  height: 200px;
-  gap: 25px;
-}
-.pic-1 {
-  grid-area: 1 / 1 / 3 / 2;
-  object-fit: cover;
-  width: 100%;
-  height: 100%;
-}
-.pic-2 {
-  grid-area: 1 / 2 / 3 / 3;
-  object-fit: cover;
-  width: 100%;
-  height: 100%;
-}
-.pic-3 {
-  grid-area: 1 / 3 / 2 / 4;
-  object-fit: cover;
-  width: 100%;
-  height: 100%;
-  border-radius: 0 25px 25px 0;
-}
-.pic-4 {
-  grid-area: 2 / 3 / 3 / 4;
-  object-fit: cover;
-  width: 100%;
-  border-radius: 0 25px 25px 0;
 }
