--- a/views/modules/info-service.html
+++ b/views/modules/info-service.html
@@ -26,27 +26,40 @@
         src="https://images.unsplash.com/photo-1696388790726-68161096266e?auto=format&fit=crop&q=80&w=2070&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
         alt="">
     </div>
-  </section>
 
-  <section class="content">
-    <div class="content-text">
-      <h3>NOMBRE DEL SERVICIO</h3>
-      <h4>Noruega</h4>
-      <p>Descripcion del servicio. Lorem ipsum dolor sit amet consectetur adipiscing elit gravida phasellus ad
-        mi, urna iaculis dis eleifend fusce bibendum a felis magnis. Lorem ipsum dolor sit amet consectetur
-        adipisicing elit. In illo nam a iusto vel quam, repellat libero tenetur nemo ut placeat enim
-        laudantium eligendi, voluptas impedit et assumenda, delectus blanditiis. Lorem ipsum dolor sit amet
-        consectetur adipisicing elit. Amet, soluta ipsam sed earum consequuntur quis, blanditiis quas nihil
-        possimus nihil similique
-        amet! A! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo vero, iure accusamus a
-        dolorem rem laborum numquam minus aliquam nobis voluptas reiciendis fugit. Placeat voluptatum sit
-        impedit id, nesciunt autem.</p>
+    <div class="info-service__details">
+      <div>
+        <div class="info-service__details__header">
+          <div class="info-service__details__header__title">
+            <h2>Habitación con vista a las montañas</h2>
+            <p>Oslo, Noruega</p>
+          </div>
 
-    </div>
-    <div class="content-card">
-      <div class="price-card">
-        <p>1000€ / 24h</p>
-        <button>Reservar</button>
+          <div class="info-service__details__header__rating">
+            <p>4.5⭐</p>
+          </div>
+        </div>
+
+        <div class="info-service__details__body">
+          <p>
+            Descripcion del servicio. Lorem ipsum dolor sit amet consectetur adipiscing elit gravida phasellus ad
+            mi, urna iaculis dis eleifend fusce bibendum a felis magnis. Lorem ipsum dolor sit amet consectetur
+            adipisicing elit. In illo nam a iusto vel quam, repellat libero tenetur nemo ut placeat enim
+            laudantium eligendi, voluptas impedit et assumenda, delectus blanditiis. Lorem ipsum dolor sit amet
+            consectetur adipisicing elit. Amet, soluta ipsam sed earum consequuntur quis, blanditiis quas nihil
+            possimus nihil similique
+            amet! A! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo vero, iure accusamus a
+            dolorem rem laborum numquam minus aliquam nobis voluptas reiciendis fugit. Placeat voluptatum sit
+            impedit id, nesciunt autem.
+          </p>
+        </div>
+      </div>
+
+      <div class="content-card">
+        <div class="price-card">
+          <p>1000€ / 24h</p>
+          <button>Reservar</button>
+        </div>
       </div>
     </div>
   </section>
