--- a/views/modules/info-service.html
+++ b/views/modules/info-service.html
@@ -6,6 +6,7 @@
   <meta http-equiv='X-UA-Compatible' content='IE=edge'>
   <title>Page Title</title>
   <meta name='viewport' content='width=device-width, initial-scale=1'>
+  <link rel="stylesheet" href="../assets/css/normalize.css">
   <link rel='stylesheet' type='text/css' media='screen' href='../assets/css/main.css'>
   <script src='main.js'></script>
 </head>
@@ -55,11 +56,9 @@
         </div>
       </div>
 
-      <div class="content-card">
-        <div class="price-card">
-          <p>1000€ / 24h</p>
-          <button>Reservar</button>
-        </div>
+      <div class="info-service__details__price-card">
+        <span>1000€ / 24h</span>
+        <button>Reservar</button>
       </div>
     </div>
   </section>
