Add settings for modal filter

--- a/views/modules/filter-bar.html
+++ b/views/modules/filter-bar.html
@@ -13,27 +13,30 @@
 
 
 </body>
+<div class="button-filter">
+  <button class="button-filter-bar" id="filter__bar" > 
+    <span>
+      <img src="../assets/img/filter new.png" alt="Filters" class="filter__img" id="filter__img" height="20px" width="20px">
+    </span> Filtros </button>
 
-<center>
-    <button class="button-filter-bar" id="filter__bar" > <span><img src="../assets/img/filter new.png" alt="Filters" class="filter__img" id="filter__img" height="20px" width="20px"></span> Filtros </button>
-</center>
-
-
-
+</div>
 
 <div id="modal__filter" class="Modal__filter">
 
     <div class="modal-content">
 
-            <header>
-                <div class="filter__header">
-                        <h4 id="title-modal-filter">Filtros</h4>
-                            
-                               <button class="exit__filter" onclick="document.getElementById('modal__filter').style.display='none'">
-                                <img src="../assets/img/salir filtro.png" alt="Salir"  height="25px" width="25px">
-                               </button>
-                         
+            <header class="header-filter">
+
+                <div class="column-filter1">
+                    <h4 id="title-modal-filter">Filtros</h4>
+                </div> 
+
+                <div class="column-filter2"> 
+                  <button class="exit__filter" onclick="document.getElementById('modal__filter').style.display='none'">
+                   <img src="../assets/img/salir filtro.png" alt="Salir"  height="25px" width="25px">
+                  </button>        
                 </div>
+                
             </header>
     
             
