--- a/views/assets/css/main.css
+++ b/views/assets/css/main.css
@@ -368,20 +368,69 @@ input:focus {
 
 
 
+/* Estilos para boton de filtros */
+.button-filter-bar{
+  padding: 10px;
+  background: none;
+  border: 1px solid var(--primary);
+  border-radius: 10px;
+  box-shadow: 0 ;
+  
+}
 
+.button-filter-bar:hover{
+border: 2px solid var(--primary);
+}
 
+.filter__img{
+  margin-right: 8px;
+}
 
   /* Estilos para el modal de filtro */
-  .Modal__filter {
-    display: none;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(218, 216, 216, 0.7);
-    z-index: 1;
-    overflow-y: scroll;
+.Modal__filter {
+   display: none;
+   position: fixed;
+   top: 0;
+   left: 0;
+   width: 100%;
+   height: 100%;
+   background-color: rgba(218, 216, 216, 0.7);
+   z-index: 1;
+   overflow-y: scroll;
+}
+
+/* Estilos para el contenido del modal */
+.modal-content {
+  background-color: var(--white);
+  width: 60%;
+  max-width: 600px;
+  margin: 100px auto;
+  padding-top: 10px;
+  padding-left: 20px;
+  padding-bottom: 20px;
+  padding-right: 20px;
+  border-radius: 10px;
+  max-height: 80%; 
+ overflow-y: auto;
+ box-shadow: 0 5px 15px var(--primary);
+}
+
+.header-filter{
+  display: flex;
+  justify-content: space-between;
+}
+
+.column-filter1{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.column-filter2{
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  margin: 0px;
 }
 
 #title-modal-filter{
@@ -389,27 +438,23 @@ input:focus {
   align-items: center;
   font-size: 30px;
 }
-.filter__header {
-    max-width: 300px;
-    width: 100px;
-    height: 51px;
-    display: flex;
-    justify-content: space-between;
-    padding: 0%;
+
+/* Estilo para el botón de cerrar */
+.exit__filter{
+  align-items: left;
+  outline: none;
+  border: 0px;
+  border-radius: 5px;
+  padding: 0%;
+  width: 30px;
+  height: 28px;
+  padding-top: 2px;
+  background: none;
 }
 
-/* Estilos para el contenido del modal */
-.modal-content {
-    background-color: var(--white);
-    width: 23%;
-    margin: 100px auto;
-    padding-top: 10px;
-    padding-left: 20px;
-    padding-bottom: 20px;
-    padding-right: 20px;
-    border-radius: 10px;
-    max-height: 80%; 
-   overflow-y: auto;
+.exit__filter:hover{
+transform: scale(1.2);
+background-color: #ccc;
 }
 
 .scroll-container {
@@ -418,30 +463,21 @@ input:focus {
 }
 
 .checkbox-grid {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);  
+  display: flex;
   gap: 20px;
+  flex-wrap: wrap;
 }
 
 .input__amount{
   display: grid;
 }
-.button-filter-bar{
-    padding: 10px;
-    background: none;
-    border: 1px solid var(--primary);
-    border-radius: 10px;
-    box-shadow: 0 ;
-    margin-top: 20%;
+
+.button-filter{
+  align-items: center;
+  justify-content: center;
+  display: flex;
 }
 
-.button-filter-bar:hover{
-  border: 2px solid var(--primary);
-}
-
-.filter__img{
-    margin-right: 8px;
-}
 
 .button_places {
     display: flex;
@@ -453,28 +489,6 @@ input:focus {
   border-bottom: 1px solid #ccc; 
   padding-bottom: 10px; 
  }
-
- 
-
-/* Estilo para el botón de cerrar */
-.exit__filter{
-    align-items: left;
-    outline: none;
-    border: 0px;
-    border-radius: 5px;
-    padding: 0%;
-    width: 30px;
-    height: 28px;
-    padding-top: 2px;
-    background: none;
-    margin-left: 130px;
-}
-
-.exit__filter:hover{
-  transform: scale(1.2);
-  background-color: #ccc;
-}
-
 
 /* img lugares  */
 .img_places_button{
