Add base HTML structure

--- a/views/assets/css/main.css
+++ b/views/assets/css/main.css
@@ -425,6 +425,11 @@ background-color: #ccc;
 }
 
 
+/* total cost event */
+.info__total__cost{
+  display: flex;
+  justify-content: space-between;
+}
 
 /* validacion de input */
 .is-invalid {
