--- a/views/modules/alerts.html
+++ b/views/modules/alerts.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../assets/css/normalize.css">
-  <link rel="stylesheet" href="../assets/css/alert.css">
+  <link rel="stylesheet" href="../assets/css/main.css">
 </head>
 
 <body>
